--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,5 +1,5 @@
 <body id="home">
-<mat-toolbar color="primary" class="toolBar">
+<mat-toolbar color="primary" class="toolBar" role="toolbar">
   <mat-toolbar-row>
     <button mat-icon-button>
       <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
@@ -23,17 +23,31 @@
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
+      <mat-form-field>
+        <mat-label>Severity</mat-label>
+        <mat-select [(ngModel)]="selectedSeverity">
+          <ng-container>
+            <mat-option value="criticalSeverityVulnerabilities">Critical</mat-option>
+            <mat-option value="highSeverityVulnerabilities">High</mat-option>
+            <mat-option value="moderateSeverityVulnerabilities">Moderate</mat-option>
+            <mat-option value="lowSeverityVulnerabilities">Low</mat-option>
+            <mat-option value="minorSeverityVulnerabilities">Minor</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
     </div>
+
     <div class="mat-elevation-z8">
       <mat-table [dataSource]="listData" matSort>
         <ng-container matColumnDef="title">
           <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{element.title + element.id}}</mat-cell>
+          <mat-cell *matCellDef="let element">{{element.title}}</mat-cell>
         </ng-container>
+
         <ng-container matColumnDef="actions">
           <mat-header-cell *matHeaderCellDef></mat-header-cell>
           <mat-cell *matCellDef="let row;let i = index;let element">
-            <button mat-icon-button (click)="printIssueId(row)">
+            <button mat-icon-button (click)="printIssueId(complexRelatorio,row)">
               <mat-icon>add</mat-icon>
             </button>
           </mat-cell>
@@ -41,7 +55,34 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="10" showFirstLastButtons></mat-paginator>
+      <mat-paginator #paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+    </div>
+
+    <div class="mat-elevation-z8">
+      <mat-table [dataSource]="complexIssuesDateSource" matSort>
+        <ng-container matColumnDef="title">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+          <mat-cell *matCellDef="let element">{{element.title}}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="severity">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Severity</mat-header-cell>
+          <mat-cell *matCellDef="let element">{{element.severity}}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let row;let i = index;let element">
+            <button mat-icon-button (click)="removeComplexIssue(complexRelatorio,row)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="complexIssuesColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: complexIssuesColumns;"></mat-row>
+      </mat-table>
+      <mat-paginator #complexIssuesPaginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="5"
+                     showFirstLastButtons></mat-paginator>
     </div>
 
 
@@ -355,7 +396,7 @@
 
     <!-------------------------------------Summary of Assessment Results------------------------------------>
     <div *ngFor="let sev of severities;let i = index">
-      <section class="sheet" *ngIf="jkl[sev].length < 1">
+      <section class="sheet" *ngIf="sortedIssues[sev].length < 1">
         <app-header></app-header>
         <div class="footerDiv">
           <app-footer></app-footer>
@@ -363,7 +404,7 @@
         <h3>{{'4.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>
         <p>{{complexRelatorio.summaryOfAssessmentResults[sev]['notEmpty']}}</p>
       </section>
-      <div *ngFor="let groupedIssues of groupArr(jkl[sev],3); let zz = index">
+      <div *ngFor="let groupedIssues of groupArr(sortedIssues[sev],3); let zz = index">
         <section class="sheet">
           <app-header></app-header>
           <div class="footerDiv">
@@ -379,7 +420,7 @@
             <tr *ngFor="let issue of groupedIssues; let xx = index">
               <td>{{issue['title']}}</td>
               <td>{{issue['description']}}</td>
-              <td>{{'5.' + (i + 1).toString() + '.' + (zz*3 + xx + 1).toString()}}</td>
+              <td>{{'5.' + (i + 1).toString() + '.' + (zz * 3 + xx + 1).toString()}}</td>
             </tr>
           </table>
         </section>
@@ -435,7 +476,7 @@
 
     <!---------------------------------------Assessment Details---------------------------------->
     <div *ngFor="let sev of severities;let i = index">
-      <section class="sheet" *ngIf="jkl[sev].length < 1">
+      <section class="sheet" *ngIf="sortedIssues[sev].length < 1">
         <app-header></app-header>
         <div class="footerDiv">
           <app-footer></app-footer>
@@ -443,7 +484,7 @@
         <h3>{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>
         <p>{{complexRelatorio.assessmentDetails[sev]['notEmpty']}}</p>
       </section>
-      <div *ngFor="let complexIssue of jkl[sev];let zz = index">
+      <div *ngFor="let complexIssue of sortedIssues[sev];let zz = index">
         <section class="sheet">
           <app-header></app-header>
           <div class="footerDiv">
@@ -460,12 +501,13 @@
           <h4>Remediation</h4>
           <p>{{complexIssue['remediation']}}</p>
           <h4>CVSS Vector</h4>
-          <a href="{{'https://www.first.org/cvss/calculator/3.0#'+complexIssue['cvssVector']}}">{{complexIssue['cvssVector']}}</a>
+          <a
+            href="{{'https://www.first.org/cvss/calculator/3.0#'+complexIssue['cvssVector']}}">{{complexIssue['cvssVector']}}</a>
           <h4>Other references</h4>
           <a href="{{complexIssue['otherReferences']}}">{{complexIssue['otherReferences']}}</a>
         </section>
 
-        <section class="sheet" (dblclick)="printIssueId(complexIssue)">
+        <section class="sheet" (dblclick)="printIssueId(complexRelatorio,complexIssue)">
           <app-header></app-header>
           <div class="footerDiv">
             <app-footer></app-footer>
@@ -479,52 +521,51 @@
     </div>
 
 
+    <!--    <div *ngFor="let sev of severities;let i = index">-->
+    <!--      <section class="sheet" *ngIf="complexRelatorio.assessmentDetails[sev]['detailedIssues'].length < 1">-->
+    <!--        <app-header></app-header>-->
+    <!--        <div class="footerDiv">-->
+    <!--          <app-footer></app-footer>-->
+    <!--        </div>-->
+    <!--        <h3>{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
+    <!--        <p-->
+    <!--        >{{complexRelatorio.assessmentDetails[sev]['empty']}}</p>-->
+    <!--      </section>-->
 
-<!--    <div *ngFor="let sev of severities;let i = index">-->
-<!--      <section class="sheet" *ngIf="complexRelatorio.assessmentDetails[sev]['detailedIssues'].length < 1">-->
-<!--        <app-header></app-header>-->
-<!--        <div class="footerDiv">-->
-<!--          <app-footer></app-footer>-->
-<!--        </div>-->
-<!--        <h3>{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
-<!--        <p-->
-<!--        >{{complexRelatorio.assessmentDetails[sev]['empty']}}</p>-->
-<!--      </section>-->
+    <!--      <div *ngFor="let finding of complexRelatorio.assessmentDetails[sev]['detailedIssues']; let zz = index">-->
+    <!--        <section class="sheet">-->
+    <!--          <app-header></app-header>-->
+    <!--          <div class="footerDiv">-->
+    <!--            <app-footer></app-footer>-->
+    <!--          </div>-->
+    <!--          <h3 *ngIf="zz==0">{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
 
-<!--      <div *ngFor="let finding of complexRelatorio.assessmentDetails[sev]['detailedIssues']; let zz = index">-->
-<!--        <section class="sheet">-->
-<!--          <app-header></app-header>-->
-<!--          <div class="footerDiv">-->
-<!--            <app-footer></app-footer>-->
-<!--          </div>-->
-<!--          <h3 *ngIf="zz==0">{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
+    <!--          <h4>{{'5.1.' + (zz + 1).toString() + ' ' + finding['title']}}</h4>-->
+    <!--          <mat-divider [ngClass]="sev"></mat-divider>-->
+    <!--          <h4>Description</h4>-->
+    <!--          <p>{{finding['description']}}</p>-->
+    <!--          <h4>Impact</h4>-->
+    <!--          <p>{{finding['impact']}}</p>-->
+    <!--          <h4>Remediation</h4>-->
+    <!--          <p>{{finding['remediation']}}</p>-->
+    <!--          <h4>CVSS Vector</h4>-->
+    <!--          <a href="{{'https://www.first.org/cvss/calculator/3.0#'+finding['cvssVector']}}">{{finding['cvssVector']}}</a>-->
+    <!--          <h4>Other references</h4>-->
+    <!--          <a href="{{finding['otherReferences']}}">{{finding['otherReferences']}}</a>-->
+    <!--        </section>-->
 
-<!--          <h4>{{'5.1.' + (zz + 1).toString() + ' ' + finding['title']}}</h4>-->
-<!--          <mat-divider [ngClass]="sev"></mat-divider>-->
-<!--          <h4>Description</h4>-->
-<!--          <p>{{finding['description']}}</p>-->
-<!--          <h4>Impact</h4>-->
-<!--          <p>{{finding['impact']}}</p>-->
-<!--          <h4>Remediation</h4>-->
-<!--          <p>{{finding['remediation']}}</p>-->
-<!--          <h4>CVSS Vector</h4>-->
-<!--          <a href="{{'https://www.first.org/cvss/calculator/3.0#'+finding['cvssVector']}}">{{finding['cvssVector']}}</a>-->
-<!--          <h4>Other references</h4>-->
-<!--          <a href="{{finding['otherReferences']}}">{{finding['otherReferences']}}</a>-->
-<!--        </section>-->
-
-<!--        <section class="sheet" (dblclick)="printIssueId(finding)">-->
-<!--          <app-header></app-header>-->
-<!--          <div class="footerDiv">-->
-<!--            <app-footer></app-footer>-->
-<!--          </div>-->
-<!--          <h4>Technical details</h4>-->
-<!--          <p></p>-->
-<!--          <h4>Current Status</h4>-->
-<!--          <p></p>-->
-<!--        </section>-->
-<!--      </div>-->
-<!--    </div>-->
+    <!--        <section class="sheet" (dblclick)="printIssueId(finding)">-->
+    <!--          <app-header></app-header>-->
+    <!--          <div class="footerDiv">-->
+    <!--            <app-footer></app-footer>-->
+    <!--          </div>-->
+    <!--          <h4>Technical details</h4>-->
+    <!--          <p></p>-->
+    <!--          <h4>Current Status</h4>-->
+    <!--          <p></p>-->
+    <!--        </section>-->
+    <!--      </div>-->
+    <!--    </div>-->
     <!---------------------------------------Assessment Details---------------------------------->
 
     <section class="sheet">
