--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -89,6 +89,7 @@
     <!----------------------------------------------COVER--------------------------------------------------->
     <section class="sheet" (dblclick)="fillCover(complexRelatorio)">
       <div class="bottomRightCover">
+        <img src="{{complexRelatorio.cover['image']}}" style="width: 100%;">
         <h1>{{complexRelatorio.cover["companyLogo"]}}</h1>
         <h1 style="word-wrap: normal;">{{complexRelatorio.cover["reportTitle"]}}</h1>
         Prepared by {{complexRelatorio.cover["companyLogo"]}} for {{complexRelatorio.cover["targetCompany"]}}<br>
@@ -430,41 +431,6 @@
         </section>
       </div>
     </div>
-
-
-    <!--    <div *ngFor="let sev of severities;let i = index">-->
-    <!--      <section class="sheet" *ngIf="complexRelatorio.summaryOfAssessmentResults[sev]['summarizedIssues'].length < 1">-->
-    <!--        <app-header></app-header>-->
-    <!--        <div class="footerDiv">-->
-    <!--          <app-footer></app-footer>-->
-    <!--        </div>-->
-    <!--        <h3>{{'4.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
-    <!--        <p>{{complexRelatorio.summaryOfAssessmentResults[sev]['notEmpty']}}</p>-->
-    <!--      </section>-->
-
-    <!--      <div-->
-    <!--        *ngFor="let issues of groupArr(complexRelatorio.summaryOfAssessmentResults[sev]['summarizedIssues'],3); let zz = index">-->
-    <!--        <section class="sheet">-->
-    <!--          <app-header></app-header>-->
-    <!--          <div class="footerDiv">-->
-    <!--            <app-footer></app-footer>-->
-    <!--          </div>-->
-    <!--          <h3 *ngIf="zz==0">{{'4.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
-    <!--          <table style="width: 100%" class="bordered">-->
-    <!--            <tr>-->
-    <!--              <th>Vulnerability</th>-->
-    <!--              <th>Description</th>-->
-    <!--              <th>Details</th>-->
-    <!--            </tr>-->
-    <!--            <tr *ngFor="let issue of issues">-->
-    <!--              <td>{{issue['vulnerability']}}</td>-->
-    <!--              <td>{{issue['description']}}</td>-->
-    <!--              <td>{{'5.' + (i + 1).toString() + '.' + (zz + 1).toString()}}</td>-->
-    <!--            </tr>-->
-    <!--          </table>-->
-    <!--        </section>-->
-    <!--      </div>-->
-    <!--    </div>-->
     <!-------------------------------------Summary of Assessment Results------------------------------------>
 
     <!-----------------------------------Assessment Details Intro-------------------------------------->
@@ -474,7 +440,8 @@
         <app-footer></app-footer>
       </div>
       <h1>5 Assessment Details</h1>
-      <p>{{complexRelatorio.assessmentDetails.intro}}</p>
+      <div [innerHTML]="complexRelatorio.assessmentDetails.intro | safe:'html'"></div>
+<!--      <p>{{complexRelatorio.assessmentDetails.intro}}</p>-->
     </section>
     <!---------------------------------------Assessment Details Intro---------------------------------->
 
@@ -486,7 +453,7 @@
           <app-footer></app-footer>
         </div>
         <h3>{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>
-        <p>{{complexRelatorio.assessmentDetails[sev]['notEmpty']}}</p>
+        <p>{{'No issues were identified and rated as ' + firstWord(sev) + ' severity.'}} </p>
       </section>
       <div *ngFor="let complexIssue of sortedIssues[sev];let zz = index">
         <section class="sheet">
@@ -532,52 +499,6 @@
       </div>
     </div>
 
-
-    <!--    <div *ngFor="let sev of severities;let i = index">-->
-    <!--      <section class="sheet" *ngIf="complexRelatorio.assessmentDetails[sev]['detailedIssues'].length < 1">-->
-    <!--        <app-header></app-header>-->
-    <!--        <div class="footerDiv">-->
-    <!--          <app-footer></app-footer>-->
-    <!--        </div>-->
-    <!--        <h3>{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
-    <!--        <p-->
-    <!--        >{{complexRelatorio.assessmentDetails[sev]['empty']}}</p>-->
-    <!--      </section>-->
-
-    <!--      <div *ngFor="let finding of complexRelatorio.assessmentDetails[sev]['detailedIssues']; let zz = index">-->
-    <!--        <section class="sheet">-->
-    <!--          <app-header></app-header>-->
-    <!--          <div class="footerDiv">-->
-    <!--            <app-footer></app-footer>-->
-    <!--          </div>-->
-    <!--          <h3 *ngIf="zz==0">{{'5.' + (i + 1).toString() + ' ' + capitalize(sev)}}</h3>-->
-
-    <!--          <h4>{{'5.1.' + (zz + 1).toString() + ' ' + finding['title']}}</h4>-->
-    <!--          <mat-divider [ngClass]="sev"></mat-divider>-->
-    <!--          <h4>Description</h4>-->
-    <!--          <p>{{finding['description']}}</p>-->
-    <!--          <h4>Impact</h4>-->
-    <!--          <p>{{finding['impact']}}</p>-->
-    <!--          <h4>Remediation</h4>-->
-    <!--          <p>{{finding['remediation']}}</p>-->
-    <!--          <h4>CVSS Vector</h4>-->
-    <!--          <a href="{{'https://www.first.org/cvss/calculator/3.0#'+finding['cvssVector']}}">{{finding['cvssVector']}}</a>-->
-    <!--          <h4>Other references</h4>-->
-    <!--          <a href="{{finding['otherReferences']}}">{{finding['otherReferences']}}</a>-->
-    <!--        </section>-->
-
-    <!--        <section class="sheet" (dblclick)="printIssueId(finding)">-->
-    <!--          <app-header></app-header>-->
-    <!--          <div class="footerDiv">-->
-    <!--            <app-footer></app-footer>-->
-    <!--          </div>-->
-    <!--          <h4>Technical details</h4>-->
-    <!--          <p></p>-->
-    <!--          <h4>Current Status</h4>-->
-    <!--          <p></p>-->
-    <!--        </section>-->
-    <!--      </div>-->
-    <!--    </div>-->
     <!---------------------------------------Assessment Details---------------------------------->
 
     <section class="sheet">
