--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -8,7 +8,7 @@
     <div>
       <a mat-button [routerLink]="'/editor'"> Report Editor </a>
     </div>
-    <button mat-icon-button style="padding-left: 1530px" (click)="logout()">
+    <button mat-icon-button style="padding-left: 1530px" [routerLink]="'/'">
       <mat-icon>logout</mat-icon>
     </button>
   </mat-toolbar-row>
