--- a/src/app/repository/relatorios-table/relatorios-table.component.html
+++ b/src/app/repository/relatorios-table/relatorios-table.component.html
@@ -14,7 +14,10 @@
   <mat-table [dataSource]="listData" matSort>
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+      <mat-cell *matCellDef="let element;let row">
+        <button class="invisible-button" (dblclick)="openInEditor(element['complexRelatorioId'])"
+                >{{element.name}}</button>
+      </mat-cell>
     </ng-container>
     <ng-container matColumnDef="status">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
